fixed wrap text on message

--- a/src/index.scss
+++ b/src/index.scss
@@ -168,6 +168,8 @@ body {
   font-size: 1.2em;
   max-width: 70%;
   padding: 0.5em;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .input-message {
